Fix layout breaking of "no e-mail" message on Android 2.3

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -337,8 +337,7 @@ _m-labels.scss
       width: 15px;
       border-radius: 7.5px;
       float: right;
-      content: "";
-      display: inline-block; }
+      content: ""; }
       @media (min-width: 60em) {
         /* line 48, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-labels.scss */
         .m-labels_itens-link:after {
@@ -346,7 +345,7 @@ _m-labels.scss
           width: 10px;
           border-radius: 0;
           margin: 1.1em 0; } }
-  /* line 66, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-labels.scss */
+  /* line 63, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-labels.scss */
   .m-labels_title {
     padding: 2em 1em 2em;
     color: #6e7176;
@@ -354,7 +353,7 @@ _m-labels.scss
     font-style: italic;
     text-align: center; }
     @media (min-width: 60em) {
-      /* line 66, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-labels.scss */
+      /* line 63, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-labels.scss */
       .m-labels_title {
         padding: 2em 1.4em 1em;
         font-size: 1.2em;
@@ -457,18 +456,16 @@ _m-mail-list.scss
   /* line 89, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-mail-list.scss */
   .m-mail-list_zero-mails {
     margin: 2em auto 0;
-    width: 85px;
-    font-size: 1.4em;
-    line-height: 1.2em;
-    text-indent: 5px; }
-    /* line 97, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-mail-list.scss */
+    width: 90px;
+    font-size: 1.4em; }
+    /* line 95, C:/Users/Yuri/Documents/Repositorios/Pessoais/teste-frontend-mail-app/src/sass/modules/_m-mail-list.scss */
     .m-mail-list_zero-mails:before {
       content: " ";
-      height: 15px;
-      width: 15px;
+      height: 12px;
+      width: 12px;
       border-radius: 0;
-      display: block;
-      float: left; }
+      margin-right: 5px;
+      display: inline-block; }
 
 /**********************
 _m-mail-opened.scss
